--- a/tarea2sage.ipynb
+++ b/tarea2sage.ipynb
@@ -244,9 +244,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.3",
-   "language": "sage",
-   "name": "sagemath"
+   "display_name": "Python 3.10.7 64-bit",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -258,7 +258,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "237d6a68fda9dff808597e35395071f4174c24576966e964531e474f9a0ae6fa"
+   }
   }
  },
  "nbformat": 4,
